# sift

./: .gitignore  ARCHITECTURE.md  COMBINATOR.md  Cargo.toml  Makefile  PHILOSOPHY.md  README.md  shell.nix
docs/: ARCHITECTURE.md  COMBINATOR.md  PHILOSOPHY.md  UI_DESIGN.md
docs/arch/: cli.md  core.md  flutter.md
flutter/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/sift/sift_app/: MainActivity.kt
flutter/lib/: main.dart
flutter/lib/src/screens/: add_screen.dart  detail_screen.dart  home.dart  list_screen.dart  tags_screen.dart
flutter/lib/src/services/: api.dart  ffi_service.dart  prefs.dart  query.dart
flutter/lib/src/widgets/: entry_card.dart  filter_bar.dart  tag_chips.dart  tag_combinator.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/rust/: Cargo.toml
flutter/rust/src/: api.rs  lib.rs
flutter/test/: widget_test.dart
src/: api.rs  config.rs  entry.rs  filter.rs  index.rs  lib.rs  main.rs  store.rs
src/cli/: add.rs  batch.rs  delete.rs  edit.rs  export.rs  import.rs  list.rs  mod.rs  search_cmd.rs  show.rs  stats.rs  tag_cmd.rs  tags_cmd.rs
src/engine/: combinator.rs  filter.rs  index.rs  mod.rs  types.rs
src/io/: store.rs
