[package]
name = "sift"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sift"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
comfy-table = "7"
directories = "6"

[dev-dependencies]
tempfile = "3"
